--- a/manual/fastapi/requirements.txt
+++ b/manual/fastapi/requirements.txt
@@ -4,5 +4,5 @@ opentelemetry-api
 opentelemetry-sdk
 opentelemetry-instrumentation
 opentelemetry-instrumentation-fastapi
-opentelemetry-distro
+opentelemetry-distro==0.46b0
 opentelemetry-exporter-otlp
